  - Added new mail event `AttachmentsDeleted`.
    [lgraf]
  - Mail overview: display the original message including a download link.
    [phgross]
  - Reword status message after sending documents by e-mail.
    [lgraf]
  - Use the same customized download view we use for documents for mails as well.
    [lgraf]
  - Don't encode attached mails when sending documents as email.
    [lgraf]

- Changes related to public_trial field:

  - Added limited-public option for public_trial field.
    [lknoepfel]
  - Vocabulary for public_trial is no longer a restricted vocab. It behaves like a regular one.
    [mathias.leimgruber]
  - Added public_trial index and metadata field.
    [lknoepfel]
  - Added public_trial column to document tab.
    [lknoepfel, phgross]
  - Allow public trial state to also be modified in closed dossier states.
    [mathias.leimgruber]
  - Add an IClassificationSettings registry record with `public_trial_default_value`.
    [lgraf]
  - Make default value adapter for `public_trial` use the configurable default
    value from IClassificationSettings registry record.
  - Reword German translations for public_trial_statement label and description.
    [lgraf]
  - Don't show public trial edit form for template dossiers.
    [lgraf]
  - Remove `public_trial` field from repository byline.
    [lgraf]
  - Omit `public_trial` and `public_trial_statement` fields from dossier and
    repository folder default views.
    [lgraf]
  - Disable public_trial edit_form when parents dossier is inactive.
    [phgross]
  - Added public_trial_statement field to the public_trial edit form.
    [phgross]


3.3.2 (2014-08-08)
------------------

- Fixed seralization error in responsetransporter, when changes containing date's.
  [phgross]


3.3.1 (2014-07-28)
------------------

- Made logout overlay easier to customize.
  [phgross]

- AdvancedSearch: Fixed bug which renders the wrong widget for first request.
  [phgross]

- Search type filter: limit types to main types.