@@ -35,7 +35,7 @@ class TestOverview(FunctionalTestCase):
                   ['Description', ''],
                   ['Foreign Reference', ''],
                   ['Original message', u'testmail.eml \u2014 1 KB Download copy'],
-                  ['Digital Available', 'no'],
+                  ['Digital Available', 'yes'],
                   ['Preserved as paper', 'yes'],
                   ['Date of receipt', date_format_helper(date.today())],
                   ['Date of delivery', ''],
